Bug 166260 - Up arrow key fails to move cursor to previous line after soft line break
Summary: Up arrow key fails to move cursor to previous line after soft line break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:24.8.8 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-04-20 07:03 UTC by Bert Cuzeau
Modified: 2025-04-30 11:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
it shows the cursor movement bug (13.53 KB, application/vnd.oasis.opendocument.text)
2025-04-20 07:21 UTC, Bert Cuzeau
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bert Cuzeau 2025-04-20 07:03:39 UTC
Description:
If a paragraph has a Line break without paragraph change (Shift+Enter), then if the cursor is in the line after, pas the column of the last character of the breaked line, it CAN'T MOVE UP with the up arrow key !
Yes : it looks incredible that this too was broken...
And don't tell us is a windows update consequence.
Please tell me how to deactivate the new and unannounced auto-update feature, get back to the previous release !

Steps to Reproduce:
1. Create a paragraph with a line break
2. followed by a longer line
3. try to move up from the longer line

Actual Results:
cursor stuck, doesn't go up

Expected Results:
cursor should go up when up arrow used.


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: StartModule
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Bert Cuzeau 2025-04-20 07:21:37 UTC
Created attachment 200414 [details]
it shows the cursor movement bug

open and enjoy
Comment 2 Bert Cuzeau 2025-04-20 07:25:00 UTC
Note that I always (IMO it should be the default) deactivate "Justify lines with a manual line break in justified paragraph" option.
But I don't think it's related with this option
It **IS** however related with the "justified" § formatting.
Comment 3 Mike Kaganski 2025-04-20 08:39:21 UTC
Skipping the spam caused by obviously wrong perception that sarcasm improves the bug reports, repro since 24.2.0.3, OK in 7.6.0.3.
Comment 4 Mateusz Wlazłowski 2025-04-20 10:13:17 UTC
Bisected using linux-64-24.2

 a097d6e85308f1f9dc91746e98faf46767a1531b is the first bad commit

tdf#57187: make sure to put trailing blanks to hole portion in narrow lines

author	        Mike Kaganski <mike.kaganski@collabora.com>	
committer	Xisco Fauli <xiscofauli@libreoffice.org>


Adding to CC: Mike Kaganski
Comment 5 Mike Kaganski 2025-04-20 19:38:00 UTC
https://gerrit.libreoffice.org/c/core/+/184391
Comment 6 Commit Notification 2025-04-21 04:21:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f2820a2a8414edefe2f1a0eeb611aa70bc99535a

tdf#166260: handle break portion early

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-04-23 10:41:14 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/cd905ee2b1fe9beb505db43bf5e6fcb82ea17301

tdf#166260: handle break portion early

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-04-23 11:46:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/db1160049aa7d5ea81c5e46c9bfaa408ed4740c1

tdf#166260: handle break portion early

It will be available in 24.8.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-04-23 13:06:16 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-3":

https://git.libreoffice.org/core/commit/b66b3ba45cad71fb9af37979622cdf4ce3e918a4

tdf#166260: handle break portion early

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-04-30 11:32:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-7":

https://git.libreoffice.org/core/commit/a00961ee98ad361ab27a244e1f2bc30b96a844b4

tdf#166260: handle break portion early

It will be available in 24.8.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.