tdf#166260: handle break portion early

Otherwise, it may get handled in the "if ( nWidth )" branch, and
increment nCurrStart incorrectly.

Change-Id: Ia9fa8a24a9fcc6cfed774a11b0a0b32d6310f47d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184391
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit f2820a2a8414edefe2f1a0eeb611aa70bc99535a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184452
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>